--- a/master.Rmd
+++ b/master.Rmd
@@ -20,6 +20,14 @@ Restore the [renv](https://rstudio.github.io/renv/) to install all of the packag
 renv::restore()
 ```
 
+## Sanity check inputs
+
+*This will check for some common issues in the input configuration/metadata/raw count data. Please address any issues flagged before continuing.*
+
+```{r, warning = FALSE}
+base::source("./sanity_check_inputs/sanity_check_inputs.R")
+```
+
 ## Prepare count data
 
 *This will output a csv file with raw, counts per million and log counts per million for all samples and RNA species (./prepare_counts/counts.csv)*
