--- a/heatmaps/heatmaps.Rmd
+++ b/heatmaps/heatmaps.Rmd
@@ -60,26 +60,6 @@ metadata <- utils::read.csv(file.path(config$metadata))
 diff_expr_results <- utils::read.table("../diff_expression/diff_expr_results/diff_expr_results.tsv",
                                        header = TRUE)
 
-# load all the count datasets (premade rds objects)
-raw_transcript_rnaseq_data <- base::readRDS(base::file.path(config$template_dir, "prepare_counts/rds_objects/raw_transcript_rnaseq_counts.rds"))
-raw_gene_rnaseq_data <- base::readRDS(base::file.path(config$template_dir, "prepare_counts/rds_objects/raw_gene_rnaseq_counts.rds"))
-
-lcpm_transcript_rnaseq_data <- base::readRDS(base::file.path(config$template_dir, "prepare_counts/rds_objects/lcpm_transcript_rnaseq_counts.rds"))
-lcpm_gene_rnaseq_data <- base::readRDS(base::file.path(config$template_dir, "prepare_counts/rds_objects/lcpm_gene_rnaseq_counts.rds"))
-
-# create a vector defining the count datasets to analyse (that are set to TRUE) based on the yaml user configuration file
-to_analyse <- config[c("transcript_rnaseq",
-                       "gene_rnaseq")] %>%
-  base::as.data.frame() %>%
-  base::t() %>%
-  base::as.data.frame() %>%
-  tibble::rownames_to_column("dataset") %>%
-  dplyr::rename("analyse" = "V1") %>%
-  tidyr::separate(dataset, c("dataset", "pipeline")) %>%
-  dplyr::filter(analyse == TRUE) %>%
-  dplyr::mutate(dataset_name = base::paste0(dataset, "_", pipeline)) %>%
-  dplyr::pull(dataset_name)
-
 # define which datasets were actually analysed in the differential expression analysis
 # to be used to flag the difference between "no significantly differentially expressed genes/transcripts found"
 # and "gene/transcript not analysed in differential expression analysis
@@ -87,17 +67,6 @@ diff_expr_analysed <- diff_expr_results %>%
   dplyr::mutate(dataset = paste(dataset, pipeline, sep = "_"))
 
 diff_expr_analysed <- unique(diff_expr_analysed$dataset)
-
-# set up a vector of all the possible datasets to analyse
-raw_datasets <- base::list(transcript_rnaseq = raw_transcript_rnaseq_data,
-                           gene_rnaseq = raw_gene_rnaseq_data)
-
-lcpm_datasets <- base::list(transcript_rnaseq = lcpm_transcript_rnaseq_data,
-                            gene_rnaseq = lcpm_gene_rnaseq_data)
-
-# filter all possible datasets by the datasets the user has specified to analyse
-raw_datasets <- raw_datasets[to_analyse]
-lcpm_datasets <- lcpm_datasets[to_analyse]
 
 # get a list of genes/transcripts that were found to be significantly differentially expressed by at least one differential expression method
 sig_gene_transcripts <- diff_expr_results %>%
@@ -206,11 +175,11 @@ all_widths <- metadata %>%
   dplyr::pull(n_samples)
 
 # set heatmap figure heights to automatically scale to how many rows are present in the data
-fig_height_transcript_rnaseq <- base::nrow(log_counts_per_million$transcript_rnaseq) / 6
-fig_height_gene_rnaseq <- base::nrow(log_counts_per_million$gene_rnaseq) / 6
+fig_height_transcript_rnaseq <- base::nrow(log_counts_per_million$lcpm_transcript_rnaseq_data) / 6
+fig_height_gene_rnaseq <- base::nrow(log_counts_per_million$lcpm_gene_rnaseq_data) / 6
 
-fig_height_transcript_rnaseq_free <- base::nrow(log_counts_per_million$transcript_rnaseq) / 4
-fig_height_gene_rnaseq_free <- base::nrow(log_counts_per_million$gene_rnaseq) / 4
+fig_height_transcript_rnaseq_free <- base::nrow(log_counts_per_million$lcpm_transcript_rnaseq_data) / 4
+fig_height_gene_rnaseq_free <- base::nrow(log_counts_per_million$lcpm_gene_rnaseq_data) / 4
 
 # need to set the figure height to NOT ZERO when the figure height ends up being less than 1 so rmarkdown doesn't error out on knitting
 fig_height_transcript_rnaseq[fig_height_transcript_rnaseq <1 ] <- 1
@@ -286,7 +255,7 @@ base::cat(base::paste0("Too many significant transcripts to plot. Plotting only 
 
 ```{r, eval = config$transcript_rnaseq, fig.height = fig_height_transcript_rnaseq, out.width = "100%"}
 # extract datasets
-lcpm_transcript_rnaseq <- log_counts_per_million$transcript_rnaseq
+lcpm_transcript_rnaseq <- log_counts_per_million$lcpm_transcript_rnaseq_data
 
 # setup for heatmap plotting
 # get the number of unique treatments
@@ -390,7 +359,7 @@ base::cat(base::paste0("Too many significant genes to plot. Plotting only 300 ge
 
 ```{r, eval = config$gene_rnaseq, fig.height = fig_height_gene_rnaseq, out.width = "100%"}
 # extract datasets
-lcpm_gene_rnaseq <- log_counts_per_million$gene_rnaseq
+lcpm_gene_rnaseq <- log_counts_per_million$lcpm_gene_rnaseq_data
 
 # setup for heatmap plotting
 # get the number of unique treatments
@@ -496,7 +465,7 @@ base::cat(base::paste0("Too many significant transcripts to plot. Plotting only 
 
 ```{r, eval = config$transcript_rnaseq, fig.height = fig_height_transcript_rnaseq_free, out.width = "100%"}
 # extract datasets
-lcpm_transcript_rnaseq <- log_counts_per_million$transcript_rnaseq
+lcpm_transcript_rnaseq <- log_counts_per_million$lcpm_transcript_rnaseq_data
 
 # get the max gene/transcript count in all datasets (over all transcripts) to scale the colour scale to
 maximum_gene_transcript_count <- base::max(c(lcpm_transcript_rnaseq))
@@ -561,7 +530,7 @@ base::cat(base::paste0("Too many significant genes to plot. Plotting only 300 ge
 
 ```{r, eval = config$gene_rnaseq, fig.height = fig_height_gene_rnaseq_free, out.width = "100%"}
 # extract datasets
-lcpm_gene_rnaseq <- log_counts_per_million$gene_rnaseq
+lcpm_gene_rnaseq <- log_counts_per_million$lcpm_gene_rnaseq_data
 
 # get the max gene/transcript count in all datasets (over all genes) to scale the colour scale to
 maximum_gene_transcript_count <- base::max(c(lcpm_gene_rnaseq))
